# cabal-audit

./: README.md  cabal-audit.cabal  cabal.project  flake.nix
app/: Main.hs
cabal-audit-command/: cabal-audit-command.cabal
cabal-audit-command/app/: Main.hs
cabal-audit-command/src/CabalAudit/: Analysis.hs  Command.hs  GhcPkg.hs  LoadUtils.hs
cabal-audit-core/: cabal-audit-core.cabal
cabal-audit-core/src/CabalAudit/: Core.hs
cabal-audit-hi/: cabal-audit-hi.cabal
cabal-audit-hi/app/: Main.hs
cabal-audit-hi/src/: CabalAuditIface.hs  GhcExtras.hs
cabal-audit-hie/: LICENSE  cabal-audit-hie.cabal
cabal-audit-hie/app/: Main.hs
cabal-audit-hie/src/: CabalAuditHie.hs  HieLoader.hs
cabal-audit-plugin/: cabal-audit-plugin.cabal
cabal-audit-plugin/src/CabalAudit/: Plugin.hs
cabal-audit-test/: cabal-audit-test.cabal
cabal-audit-test/src/CabalAudit/Test/: Class.hs  External.hs  Inline.hs  Instance.hs  User.hs
ghc-libraries-patches/: 0001-Enable-hie-file-generation.patch
src/: CabalAudit.hs  CabalAuditIface.hs  CabalAuditPlugin.hs  HieLoader.hs
test/CabalAudit/Test/: Class.hs  Instance.hs  Simple.hs  Typeclass.hs  User.hs
