cabal-version: 3.0
name:          cabal-audit
version:       0.1
synopsis:      Check external declarations.
description:   This packages provides the cabal-audit command.
category:      Development
author:        Tristan Cacqueray
maintainer:    tdecacqu@redhat.com
license:       MIT
license-file:  LICENSE
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/TristanCacqueray/cabal-audit

common common
  build-depends:      base <5
  default-language:   GHC2021
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns -Wno-partial-type-signatures
    -fwrite-ide-info -Wno-missing-methods

  default-extensions:
    BlockArguments
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    StrictData

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    CabalAudit
    CabalAuditPlugin
    CabalAuditIface
    HieLoader

  build-depends:
    , algebraic-graphs
    , binary
    , bytestring
    , containers
    , directory
    , filepath
    , generic-lens
    , ghc
    , lens
    , transformers

executable cabal-audit
  import:         common
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  build-depends:  cabal-audit

test-suite spec
  import:         common
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:  cabal-audit
  ghc-options:    -fplugin CabalAuditPlugin -fwrite-if-simplified-core
  other-modules:
    CabalAudit.Test.Instance
    CabalAudit.Test.Simple
    CabalAudit.Test.Class
    CabalAudit.Test.User

  type:           exitcode-stdio-1.0
