cabal-version: 3.0
name:          cabal-audit-core
version:       0.1
synopsis:      The cabal-audit core library to process Core
description:   The cabal-audit core library to process Core.
category:      Development
author:        Tristan Cacqueray
maintainer:    tdecacqu@redhat.com
license:       MIT
license-file:  LICENSE
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/TristanCacqueray/cabal-audit

common common
  build-depends:      base <5
  default-language:   GHC2021
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns -Wno-partial-type-signatures
    -fwrite-ide-info -Wno-missing-methods

  default-extensions:
    BlockArguments
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    StrictData

  build-depends:
    , base        <5
    , binary
    , containers
    , ghc

  hs-source-dirs:     src

library
  import:          common
  exposed-modules: CabalAudit.Core
