cabal-version: 3.0
name:          cabal-audit-plugin
version:       0.1
synopsis:      A GHC plugin to collect declarations dependencies.
description:
  Use this plugin to collect declarations dependencies in a `.hi-deps` file.

category:      Development
author:        Tristan Cacqueray
maintainer:    tdecacqu@redhat.com
license:       MIT
license-file:  LICENSE
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/TristanCacqueray/cabal-audit

common common
  build-depends:      base <5
  default-language:   GHC2021
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns -Wno-partial-type-signatures
    -fwrite-ide-info -Wno-missing-methods

  default-extensions:
    BlockArguments
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    StrictData

  build-depends:
    , base              <5
    , binary
    , cabal-audit-core
    , containers
    , ghc

  hs-source-dirs:     src

library
  import:          common
  exposed-modules: CabalAudit.Plugin

-- This produces the .so version
foreign-library cabal-audit-plugin
  import:        common
  type:          native-shared
  ghc-options:   -this-unit-id cabal-audit-plugin -fno-link-rts
  other-modules: CabalAudit.Plugin
